# rudder-airflow-provider

./: .gitignore  CLAUDE.md  CODEOWNERS  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yaml  test.yaml
examples/: etl_sample_dag.py  profiles_sample_dag.py  retl_sample.dag.py  retl_sample_dag.py  sample_dag.py
rudder_airflow_provider/: __init__.py
rudder_airflow_provider/hooks/: rudderstack.py
rudder_airflow_provider/operators/: rudderstack.py
rudder_airflow_provider/test/hooks/: test_rudderstack_hook.py
rudder_airflow_provider/test/operators/: test_rudderstack_operator.py
