[build-system]
requires = [
    "setuptools >= 80.0.0",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rudderstack-airflow-provider"
version = "2.4.1"
readme = "README.md"
license = {file = "LICENSE"}
description = "Apache airflow provider for managing Reverse ETL syncs and Profiles runs in RudderStack."
keywords = [ "airflow", "orchestration", "rudderstack"]
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dependencies = [
    "apache-airflow>=2.10.0,<=3.0.1",
    "apache-airflow-providers-http>=5.0.0",
    "pytest>=7.3.1",
    "requests>=2.32.3",
    "responses>=0.25.0",
    "setuptools>=80.0.0",
    "zipp>=3.19.1",
    "ruff>=0.6.8"
]
requires-python = ">= 3.11"

[tool.setuptools.packages.find]
exclude = ["*test*"]

[project.entry-points.apache_airflow_provider]
provider_info = "rudder_airflow_provider.__init__:get_provider_info"
