[metadata]
name = rudderstack-airflow-provider
version = attr: rudder_airflow_provider.version.__version__
description = airflow provider for rudderstack
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
repository = https://github.com/rudderlabs/rudder-airflow-provider
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = 
    rudder
    rudderstack
    airflow
    apache-airflow

[options]
python_requires >= 3.6
packages = find:
install_requires = 
    apache-airflow >= 2.5.3
    apache-airflow-providers-http >= 4.2.0
    requests >= 2.28.2

[options.packages.find]
exclude= *test*

[options.entry_points]
apache_airflow_provider=
    provider_info=rudder_airflow_provider:get_provider_info
